[tool.poetry]
package-mode = false
name = "llm-economy-summary"
version = "0.1.0"
description = ""
authors = ["runru1030 <runru1030@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.127.0,<0.128.0"
uvicorn = ">=0.40.0,<0.41.0"
pydantic-settings = ">=2.12.0,<3.0.0"
sqlalchemy = ">=2.0.45,<3.0.0"
alembic = ">=1.17.2,<2.0.0"
psycopg2-binary = ">=2.9.0,<3.0.0"
asyncpg = ">=0.29.0,<0.30.0"
greenlet = ">=3.3.0,<4.0.0"
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
