[project]
name = "llm-economy-summary"
version = "0.1.0"
description = ""
authors = [
    {name = "runru1030",email = "runru1030@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "fastapi (>=0.127.0,<0.128.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "asyncpg (>=0.29.0,<0.30.0)",
    "greenlet (>=3.3.0,<4.0.0)",
    "langchain (>=1.2.6,<2.0.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "langgraph (>=1.0.6,<2.0.0)",
    "chromadb (>=1.4.1,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
